# ot-harjoitustyo

./: README.md
harjoitustyo/: .coverage  .coveragerc  pyproject.toml  tasks.py
harjoitustyo/dokumentaatio/: arkkitehtuuri.md  changelog.md  tuntikirjanpito.md  vaatimusmaarittely.md
harjoitustyo/input/: geojson_sample.json  indeksi.json  roads.json
harjoitustyo/src/: data_handler.py  direction_map.py  histogram_generator.py  hog2.py  index.py  result_data_creator.py  simulation_unit.py
harjoitustyo/src/tests/: data_handler_test.py  hog_test.py
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/tests/: .coverage  kassapaate_test.py  maksukortti_test.py
